--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node.js/Express/Mongoose/MongoDB",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,8 @@
   "homepage": "https://github.com/krasnoselskiy/Shopping-Cart#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.1",
     "nodemon": "^2.0.2"
